# libvtp

./: .gitignore  CMakeLists.txt  NOTICE  README.md  RELEASES.md  build-arduino-library.sh
doc/: vtp-1.0-spec.md  vtp-v1-spec.md
examples/arduino/decode_vtp/: decode_vtp.ino
examples/arduino/emulate_sampling/: emulate_sampling.ino
examples/arduino/encode_potis/: encode_potis.ino
include/vtp/: codec.h  error.h  fold.h  instruction_types.h
src/: cli.c  codec.c  codec.h  fold.c
tests/: codec.c  fold.c  main.c
tools/: vtp-assemble.c  vtp-disassemble.c
